--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href=""><i class="fab fa-telegram-plane"></i></a>
             </div>
             <div class="top-bar__right__auth">
-                <a id="auth_btn">
+                <a href="login.html" >
                     <i class="far fa-user"></i>
                     Login / Register
                 </a>
