--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+
 <div class="top-bar">
     <div class="wrapper">
         <div class="top-bar__left">
@@ -62,100 +63,32 @@
     </div>
 </div>
 
-<header class="header">
-    <div class="container">
-        <div class="row v-center">
-            <div class="header-item item-left">
-                <div class="logo">
-                    <a href="">MOBILE+</a>
+<div class="menu">
+    <div class="wrapper">
+        <div class="menu__logo"><a href="">MOBILE+</a></div>
+        <div class="menu__links">
+            <a href="">home</a>
+            <div class="menu__links__dropdown">
+                <a href="" class="">shop <i class="fa fa-angle-down"></i></a>
+                <div class="menu__links__dropdown__menu">
+                    <a href="">Iphone</a>
+                    <a href="">Samsung</a>
+                    <a href="">OnePlus</a>
+                    <a href="">Huawei</a>
                 </div>
             </div>
-            <div class="header-item item-center">
-                <div class="menu-overlay">
+            <div class="menu__links__dropdown">
+                <a href="" class="menu__links__dropdown">my account <i class="fa fa-angle-down"></i></a>
+                <div class="menu__links__dropdown__menu">
+                    <a href="">My account</a>
+                    <a href="">Wishlist</a>
+                    <a href="">Basket</a>
                 </div>
-                <nav class="menu">
-                    <div class="mobile-menu-head">
-                        <div class="go-back"><i class="fa fa-angle-left"></i></div>
-                        <div class="current-menu-title"></div>
-                        <div class="mobile-menu-close">&times;</div>
-                    </div>
-                    <ul class="menu-main">
-                        <li>
-                            <a href="#">HOME</a>
-                        </li>
-                        <li class="menu-item-has-children">
-                            <a href="#">SHOP <i class="fa fa-angle-down"></i></a>
-                            <div class="sub-menu mega-menu mega-menu-column-4">
-                                <div class="list-item">
-                                    <h4 class="title">Iphone</h4>
-                                    <ul>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                    </ul>
-                                    <h4 class="title">Samsung</h4>
-                                    <ul>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                    </ul>
-                                </div>
-                                <div class="list-item">
-                                    <h4 class="title">Xiaomi</h4>
-                                    <ul>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                    </ul>
-                                    <h4 class="title">OnePlus</h4>
-                                    <ul>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                    </ul>
-                                </div>
-                                <div class="list-item">
-                                    <h4 class="title">Huawey</h4>
-                                    <ul>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                        <li><a href="#">Product List</a></li>
-                                    </ul>
-                                </div>
-                                <div class="list-item">
-                                    <img src="img/buyback_offer_banner.png" alt="shop">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="menu-item-has-children">
-                            <a href="#">MY ACCOUNT <i class="fas fa-angle-down"></i></a>
-                            <div class="sub-menu single-column-menu">
-                                <ul>
-                                    <li><a href="#">My Profile</a></li>
-                                    <li><a href="#">Wishlist</a></li>
-                                    <li><a href="#">Basket</a></li>
-                                </ul>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="#">FAQ</a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
+            <a href="">faq</a>
         </div>
     </div>
-</header>
+</div>
 
 <div class="special">
     <div class="wrapper">
@@ -229,7 +162,61 @@
             </div>
         </div>
     </div>
+
 </div>
+<div class="products">
+    <div class="wrapper">
+        <h2>Sample text</h2>
+        <div class="wrapper">
+            <div class="products__card">
+                <div class="products__card__img"></div>
+                <div class="products__card__info">
+                    <div class="products__card__info__desc">
+                        Smartphone Apple iPhone 12 128GB Red
+                    </div>
+                    <div class="products__card__info__price">
+                        600$
+                    </div>
+                </div>
+            </div>
+            <div class="products__card">
+                <div class="products__card__img"></div>
+                <div class="products__card__info">
+                    <div class="products__card__info__desc">
+                        Smartphone Apple iPhone 12 128GB Red
+                    </div>
+                    <div class="products__card__info__price">
+                        600$
+                    </div>
+                </div>
+            </div>
+            <div class="products__card">
+                <div class="products__card__img"></div>
+                <div class="products__card__info">
+                    <div class="products__card__info__desc">
+                        Smartphone Apple iPhone 12 128GB Red
+                    </div>
+                    <div class="products__card__info__price">
+                        600$
+                    </div>
+                </div>
+            </div>
+            <div class="products__card">
+                <div class="products__card__img"></div>
+                <div class="products__card__info">
+                    <div class="products__card__info__desc">
+                        Smartphone Apple iPhone 12 128GB Red
+                    </div>
+                    <div class="products__card__info__price">
+                        600$
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 
 <div class="mmap">
     <div class="map" id="map"></div>
@@ -254,6 +241,53 @@
     </div>
 </div>
 <img style="display: none" src="img/mapIcon.png" alt="">
+
+
+<div class="footer">
+    <div class="footer__row">
+        <div class="footer__row__left footer_menu">
+            <a href="">iPhone</a>
+            <a href="">Samsung</a>
+            <a href="">OnePlus</a>
+            <a href="">Huawei</a>
+            <a href="">Xiaomi</a>
+            <a href="">Oppo</a>
+            <a href="">Vivo</a>
+            <a href="">Poco</a>
+            <a href="">Realme</a>
+            <a href="">Cases</a>
+            <a href="">Accessories</a>
+            <a href="">Headphones</a>
+        </div>
+        <div class="footer__row__right footer_right">
+            <div class="footer__row__right__box">
+                <p>E-mail: support@mobileplus.com</p>
+            </div>
+
+            <div class="footer__row__right__box">
+                <p>Working hours: Mn-Fr: 9:00 - 21:00</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer__row">
+        <div class="footer__row__left">
+            <div class="menu__logo"><a href="">MOBILE+</a></div>
+        </div>
+        <div class="footer__row__right footer_right">
+            <div class="footer__row__right__box__imgs ">
+                <img src="img/visa.webp" alt="visa">
+                <img src="img/wayforpay.webp" alt="wayforpay">
+                <img src="img/mastercard.webp" alt="mastercard">
+            </div>
+            <div class="footer__row__right__box__imgs ">
+            </div>
+        </div>
+    </div>
+
+
+</div>
+
 
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script async defer
